--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title><%= htmlWebpackPlugin.options.title %></title>
-	
+	<link rel="stylesheet" href="/static/iconfont/iconfont.css">
 </head>
 <body>
 	<div id="app"></div>
